# mprocs

./: Cargo.toml  Makefile  justfile
.github/workflows/: release.yml
src/: Cargo.toml  app.rs  cli.rs  clipboard.rs  config.rs  config_lua.rs  encode_term.rs  error.rs  key.rs  main.rs  proc.rs  settings.rs  theme.rs  ui_add_proc.rs  ui_keymap.rs  ui_procs.rs  ui_term.rs  yaml_val.rs
