[profile.release]
strip = true
opt-level = 2
lto = true        # link time optimization
panic = "abort"
codegen-units = 1

[workspace]
members = [
  "src",
  "vendor/pty",
  "vendor/vt100",
]

[patch.crates-io]
unicode-width = { git = "https://github.com/waltarix/unicode-width", tag = "v0.1.9-custom-r3" }
