[package]
name = "mprocs"
version = "0.6.4"
authors = ["Pavel Volokitin <pavelvolokitin@gmail.com>"]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools",
]
edition = "2021"
keywords = [
  "cli",
  "terminal",
  "tui",
  "utility",
]
license = "MIT"
repository = "https://github.com/pvolok/mprocs"
description = "TUI for running multiple processes"

include = ["*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mprocs"
path = "main.rs"

[dependencies]
anyhow = "1.0.44"
assert_matches = "1.5.0"
base64 = "0.13.0"
clap = { version = "4.0.27", features = ["derive"] }
clipboard-win = "4.4.2"
crossterm = { version = "0.23.2", features = ["event-stream"] }
dunce = "1.0.2"
# Excluded "textfilter" feature that depends on regex (~0.7 MiB).
flexi_logger = { version = "0.22.3", default-features = false, features = ["colors"] }
futures = { version = "0.3.21" }
indexmap = { version = "1.8.0", features = ["serde"] }
libc = "0.2.120"
log = "0.4.14"
mlua = { version = "0.8.3", features = ["luajit52", "serialize", "vendored"] }
mprocs-vt100 = "0.1.1"
once_cell = "1.16.0"
phf = { version = "0.10.1", features = ["macros"] }
portable-pty = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.24"
tokio = { version = "1", features = ["full"] }
triggered = "0.1.2"
tui = "0.18.0"
tui-input = "0.4.0"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.10"
which = "4.2.5"
xdg = "2.4.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["consoleapi", "winuser"] }
